--- a/shippable.yml
+++ b/shippable.yml
@@ -89,6 +89,21 @@ resources:
     seed:
       versionName: master
 
+  - name: microbase_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: shippable/microbase
+      branch: master
+
+  - name: microbase_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/microbase"
+    seed:
+      versionName: master
+
 jobs:
   - name: core_prep
     type: runSh
@@ -118,8 +133,28 @@ jobs:
     on_failure:
       - script: echo 'Failed job .... :('
 
+  - name: microbase_prep
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: core_prep_src
+        switch: off
+      - IN: core_dh_cli
+        switch: off
+      - IN: u14_img
+      - IN: microbase_repo
+      - TASK:
+        - script: |
+            pushd $(shipctl get_resource_state "core_prep_src")
+              ./buildImage.sh microbase
+            popd
+      - OUT: microbase_img
+    on_success:
+      - script: echo 'on success !!!!!'
+    on_failure:
+      - script: echo 'Failed job .... :('
 
-  ### Tagging u16 services
   - name: tag_push_core
     type: runSh
     triggerMode: parallel
