--- a/shippable.yml
+++ b/shippable.yml
@@ -155,7 +155,7 @@ jobs:
     on_failure:
       - script: echo 'Failed job .... :('
 
-  - name: tag_push_core
+  - name: tag_push_dry_dh
     type: runSh
     triggerMode: parallel
     dependencyMode: strict
@@ -190,7 +190,33 @@ jobs:
       - TASK:
         - script: |
             pushd $(shipctl get_resource_state "core_prep_src")
-              ./tagAndPushSvcs.sh
+              ./tagAndPushSvcs.sh drydock dry-dock dhDrydock.txt
+            popd
+    on_success:
+      - script: echo 'on success !!!!!'
+    on_failure:
+      - script: echo 'Failed job .... :('
+
+  - name: tag_push_ship_dh
+    type: runSh
+    triggerMode: parallel
+    dependencyMode: strict
+    steps:
+      - IN: core_prep_src
+        switch: off
+      - IN: core_dh_cli
+        switch: off
+      - IN: core_gh_ssh
+        switch: off
+      - IN: microbase_img
+        switch: off
+      - IN: microbase_repo
+        switch: off
+      - IN: rel_prod
+      - TASK:
+        - script: |
+            pushd $(shipctl get_resource_state "core_prep_src")
+              ./tagAndPushSvcs.sh drydock shippable dhShippable.txt
             popd
     on_success:
       - script: echo 'on success !!!!!'
