--- a/shippable.yml
+++ b/shippable.yml
@@ -104,20 +104,20 @@ resources:
     seed:
       versionName: master
 
-  - name: admiral_repo
-    type: gitRepo
-    integration: avinci_gh
-    pointer:
-      sourceName: shippable/admiral
-      branch: master
-
-  - name: admiral_img
-    type: image
-    integration: shipDH
-    pointer:
-      sourceName: "drydock/admiral"
-    seed:
-      versionName: latest
+#  - name: admiral_repo
+#    type: gitRepo
+#    integration: avinci_gh
+#    pointer:
+#      sourceName: shippable/admiral
+#      branch: master
+#
+#  - name: admiral_img
+#    type: image
+#    integration: shipDH
+#    pointer:
+#      sourceName: "drydock/admiral"
+#    seed:
+#      versionName: latest
 
 jobs:
   - name: core_prep
@@ -170,27 +170,27 @@ jobs:
     on_failure:
       - script: echo 'Failed job .... :('
 
-  - name: admiral_ubu_14_04_prep
-    type: runSh
-    triggerMode: parallel
-    dependencyMode: strict
-    steps:
-      - IN: core_prep_src
-        switch: off
-      - IN: core_dh_cli
-        switch: off
-      - IN: microbase_img
-      - IN: admiral_repo
-      - TASK:
-        - script: |
-            pushd $(shipctl get_resource_state "core_prep_src")
-              ./buildImage.sh admiral
-            popd
-      - OUT: admiral_img
-    on_success:
-      - script: echo 'on success !!!!!'
-    on_failure:
-      - script: echo 'Failed job .... :('
+#  - name: admiral_ubu_14_04_prep
+#    type: runSh
+#    triggerMode: parallel
+#    dependencyMode: strict
+#    steps:
+#      - IN: core_prep_src
+#        switch: off
+#      - IN: core_dh_cli
+#        switch: off
+#      - IN: microbase_img
+#      - IN: admiral_repo
+#      - TASK:
+#        - script: |
+#            pushd $(shipctl get_resource_state "core_prep_src")
+#              ./buildImage.sh admiral
+#            popd
+#      - OUT: admiral_img
+#    on_success:
+#      - script: echo 'on success !!!!!'
+#    on_failure:
+#      - script: echo 'Failed job .... :('
 
   - name: tag_push_dry_dh
     type: runSh
