--- a/shippable.yml
+++ b/shippable.yml
@@ -104,20 +104,20 @@ resources:
     seed:
       versionName: master
 
-  - name: admiral_repo
-    type: gitRepo
-    integration: avinci_gh
-    pointer:
-      sourceName: shippable/admiral
-      branch: master
-
-  - name: admiral_img
-    type: image
-    integration: shipDH
-    pointer:
-      sourceName: "drydock/admiral"
-    seed:
-      versionName: latest
+#  - name: admiral_repo
+#    type: gitRepo
+#    integration: avinci_gh
+#    pointer:
+#      sourceName: shippable/admiral
+#      branch: master
+#
+#  - name: admiral_img
+#    type: image
+#    integration: shipDH
+#    pointer:
+#      sourceName: "drydock/admiral"
+#    seed:
+#      versionName: latest
 
 jobs:
   - name: core_prep
