--- a/shippable.yml
+++ b/shippable.yml
@@ -1,33 +1,33 @@
 resources:
-#  - name: microbase_repo
-#    type: gitRepo
-#    integration: avinci_gh
-#    pointer:
-#      sourceName: shippable/microbase
-#      branch: master
-#
-#  - name: microbase_img
-#    type: image
-#    integration: shipDH
-#    pointer:
-#      sourceName: "drydock/microbase"
-#    seed:
-#      versionName: master
-#
-#  - name: admiral_repo
-#    type: gitRepo
-#    integration: avinci_gh
-#    pointer:
-#      sourceName: shippable/admiral
-#      branch: master
-#
-#  - name: admiral_img
-#    type: image
-#    integration: shipDH
-#    pointer:
-#      sourceName: "drydock/admiral"
-#    seed:
-#      versionName: master
+  - name: microbase_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: shippable/microbase
+      branch: master
+
+  - name: microbase_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/microbase"
+    seed:
+      versionName: master
+
+  - name: admiral_repo
+    type: gitRepo
+    integration: avinci_gh
+    pointer:
+      sourceName: shippable/admiral
+      branch: master
+
+  - name: admiral_img
+    type: image
+    integration: shipDH
+    pointer:
+      sourceName: "drydock/admiral"
+    seed:
+      versionName: master
 
   - name: core_prep_src
     type: gitRepo
